--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -9,6 +9,25 @@
   margin-bottom: 20px;
 }
 
+.favorites {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 25px;
+  .button {
+    border-radius: 5px;
+    border: none;
+    padding: 5px;
+    background-color: rgb(59, 59, 183);
+    cursor: pointer;
+  }
+}
+
+.separator {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 15px;
+}
+
 .list {
   display: flex;
   flex-wrap: wrap;
@@ -57,6 +76,53 @@
       }
       color: white;
       font-size: 14px;
+    }
+  }
+
+  .pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    margin-top: 20px;
+
+    .arrow {
+      background: none;
+      border: none;
+      font-size: 18px;
+      cursor: pointer;
+      padding: 5px;
+      &:disabled {
+        opacity: 0.5;
+        cursor: default;
+      }
+    }
+
+    .pageItem {
+        width: 20px;
+    }
+
+    .page {
+      background: #fff;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      padding: 5px 10px;
+      cursor: pointer;
+      transition: all 0.2s ease-in-out;
+
+      &:hover {
+        background: #f1f1f1;
+      }
+
+      &.active {
+        background: #ff5a5f;
+        color: #fff;
+        border-color: #ff5a5f;
+      }
+    }
+
+    .dots {
+      font-size: 18px;
     }
   }
 }
