--- a/src/app/recipes/[id]/page.module.scss
+++ b/src/app/recipes/[id]/page.module.scss
@@ -15,7 +15,7 @@
 
 .image{
     display: block;
-    width: 300px;
+    width: 500px;
     height: 300px;
     object-fit: cover;
     margin: 0 auto;
@@ -30,10 +30,16 @@
     margin-bottom: 20px;
 }
 .item{
-    width: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
     height: 80px;
     border: 1px solid #ddd;
     text-align: center;
     padding: 10px;
     margin: 10px;
+    .measure{
+        font-weight: bold;
+    }
 }
