--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,7 +1,7 @@
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 20px;
+  padding: 40px 20px;
 }
 
 .title {
@@ -25,6 +25,11 @@
     color: white;
     font-size: 14px;
   }
+}
+
+.select, .input {
+  width: 300px;
+  height: 30px;
 }
 
 .separator {
