--- a/src/app/recipes/[id]/page.module.scss
+++ b/src/app/recipes/[id]/page.module.scss
@@ -1,45 +1,63 @@
-.container{
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 40px 20px;
 }
 
-.title{
-    text-align: center;
-    margin-bottom: 20px;
-}
-.subtitle{
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-.image{
-    display: block;
-    width: 500px;
-    height: 300px;
-    object-fit: cover;
-    margin: 0 auto;
-    margin-bottom: 15px;
-}
-
-.list{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    list-style: none;
-    margin-bottom: 20px;
-}
-.item{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 300px;
-    height: 80px;
-    border: 1px solid #ddd;
-    text-align: center;
-    padding: 10px;
-    margin: 10px;
-    .measure{
-        font-weight: bold;
+.btnWrap {
+  display: flex;
+  justify-content: flex-end;
+  .button {
+    width: auto;
+    border-radius: 5px;
+    border: none;
+    padding: 5px;
+    background-color: rgb(59, 59, 183);
+    &:hover {
+      background-color: rgb(65, 81, 230);
     }
+    color: white;
+    font-size: 14px;
+    cursor: pointer;
+  }
+}
+
+.title {
+  text-align: center;
+  margin-bottom: 20px;
+}
+.subtitle {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.image {
+  display: block;
+  width: 500px;
+  height: 300px;
+  object-fit: cover;
+  margin: 0 auto;
+  margin-bottom: 15px;
+}
+
+.list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  list-style: none;
+  margin-bottom: 20px;
+}
+.item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 80px;
+  border: 1px solid #ddd;
+  text-align: center;
+  padding: 10px;
+  margin: 10px;
+  .measure {
+    font-weight: bold;
+  }
 }
