fix favorites ui

--- a/src/app/favorites/page.module.scss
+++ b/src/app/favorites/page.module.scss
@@ -24,12 +24,23 @@
   text-align: center;
   margin-bottom: 20px;
 }
+
+.content{
+  display: flex;
+  flex-wrap: nowrap;
+  .ingredientsListWrap{
+    width: 30%;
+    margin-left: 20px;
+  }
+}
+
 .list {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   list-style: none;
   margin-bottom: 20px;
+  width: 70%;
 }
 
 .card {
